--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -28,6 +28,7 @@ export VLLM_EXTRA_ARGS="__VLLM_EXTRA_ARGS__"
 export TRITON_CC=gcc
 export CC=/usr/bin/gcc
 export CXX=/usr/bin/g++
+export VLLM_USE_FAST_TOKENIZER=0
 
 export TMPDIR=${PWD}/tmp
 export CUDA_CACHE_PATH=${TMPDIR}/cuda_cache
