Updating for support on AECM

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -29,6 +29,8 @@ export TRITON_CC=gcc
 export CC=/usr/bin/gcc
 export CXX=/usr/bin/g++
 export VLLM_USE_FAST_TOKENIZER=0
+export TRANSFORMERS_NO_FAST_TOKENIZER=1
+
 
 export TMPDIR=${PWD}/tmp
 export CUDA_CACHE_PATH=${TMPDIR}/cuda_cache
