--- a/singularity/singularity-compose.yml
+++ b/singularity/singularity-compose.yml
@@ -16,7 +16,7 @@ instances:
     run:
       args:
         - >
-          nohup python3 -m vllm.entrypoints.openai.api_server --model "/__MODEL_BASE__" --tokenizer "/__MODEL_BASE__"  --tokenizer-mode slow --host 0.0.0.0 --port ${VLLM_SERVER_PORT} ${VLLM_EXTRA_ARGS} > /logs/vllm.out 2>&1 &
+          nohup python3 -m vllm.entrypoints.openai.api_server --model "/__MODEL_BASE__" --tokenizer "/__MODEL_BASE__"  --host 0.0.0.0 --port ${VLLM_SERVER_PORT} ${VLLM_EXTRA_ARGS} > /logs/vllm.out 2>&1 &
     volumes:
       - ./logs:/logs
       - ./cache:/root/.cache
