Updating for support on AECM

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -23,7 +23,7 @@ export HF_HOME="/root/.cache/huggingface"
 
 # Recommended on T4/V100 and for mistral tokenizer
 export DOCS_DIR=./docs
-export VLLM_ATTENTION_BACKEND=TRITON_ATTN
+#export VLLM_ATTENTION_BACKEND=TRITON_ATTN
 export VLLM_EXTRA_ARGS="__VLLM_EXTRA_ARGS__"
 export TRITON_CC=gcc
 export CC=/usr/bin/gcc
