Update documentation with comprehensive README, architecture docs
- Rewrote README.md with quickstart guide, configuration reference, troubleshooting
- Added docs/ARCHITECTURE.md with detailed system design and data flow diagrams
- Added docs/IMPLEMENTATION_PLAN.md with development roadmap
- Updated .gitignore to allow documentation markdown files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 cache
-docs
+# docs directory is for RAG documents, but allow documentation files
+docs/*
+!docs/*.md
+!docs/IMPLEMENTATION_PLAN.md
+!docs/ARCHITECTURE.md
 .env
 env.sh
 *.sif
