Hide HuggingFace token input when using local model source
The hftoken field is now conditionally hidden/ignored when model.source is 'local',
since it's only needed for downloading from HuggingFace Hub.

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -709,6 +709,8 @@ jobs:
         default: ${{ org.HF_TOKEN }}
         type: password
         tooltip: Required for gated models (Llama, etc.)
+        hidden: ${{ inputs.model.source != 'huggingface' }}
+        ignore: ${{ inputs.model.source != 'huggingface' }}
       
       apikey:
         label: vLLM API Key
