--- a/local.env.example
+++ b/local.env.example
@@ -28,7 +28,7 @@ MODEL_PATH=/models/Llama-3.1-8B-Instruct
 #HF_TOKEN=hf_xxxxxxxxxxxxx
 
 # Where to cache downloaded models
-MODEL_CACHE_DIR=~/.cache/activate-models
+MODEL_CACHE_DIR=~/pw/models
 
 # ---- Service Ports ----
 # Set to 0 for auto-assignment, or specify fixed ports
